2011-05-06  pk <paiburio-m@yahoo.com>

	Set label-text only on non-resized bookmarks

2011-05-06  pk <paiburio-m@yahoo.com>

	Ability to resize task-shortcuts and bookmarks

	If int gconf-key /apps/osso/hildon-home/task-shortcuts-size
	or /apps/osso/hildon-home/task-bookmarks-size
	is set, scaled backgrounds are generated and saved to
	/etc/hildon/theme/images/*Scaled*. These are then used
	with scaled icons to generate widgets of given size.

	This change is from AsiQue via
	https://bugs.maemo.org/show_bug.cgi?id=11990 with some
	whitespace patched.

2011-05-06  pk <paiburio-m@yahoo.com>

	Ability to hide the background of task-shortcuts
	
	with boolean gconf-key 
	/apps/osso/hildon-home/task-shortcuts-hide-bg
	
	Based on the patch submitted in 
	https://bugs.maemo.org/show_bug.cgi?id=11990

2010-08-20  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#186852 .desktop file in ~/.local/share/applications/hildon
		  not used for shortcut list

	* src/Makefile.am:
	  Added directory definition.
	* src/hd-shortcut-widgets.c (hd_shortcut_widgets_get):
	  Scan that directory as well.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	NB#165381 Hildon-home is not responding if theme is changed
	          when all shortcuts are added to home view.

	We were super-busy restyling widgets when the theme was changed
	and couldn't respond to the window manager in time.  This task
	not only takes ages but also unnecessary because we exit anyway
	to prevent memory leaks.

	* hildon-home.c:
	  Make gtk ignore _GTK_READ_RCFILES completely.
	* hd-cairo-surface-cache.c:
	  Don't monitor the theme link and don't react to its changes.
	* hd-task-shortcut.c
	* hd-bookmark-shortcut.c
	* hd-incoming-event-window.c:
	  Don't react to theme change.

2010-07-29  Adam Endrodi <adam.endrodi@blumsoft.eu>

	Add as tight D-BUS message matches as possible.

	* src/hd-hildon-home-dbus.c
	* src/hd-incoming-events.c:
	  Use dbus_message_get_args() rather than iterators.
